@@ -1,3 +1,0 @@
-The Google API Client for Python is a client library for accessing the Plus,
-Moderator, and many other Google APIs. This is the python 3.x port of the
-package.
